--- a/src/components/MedalList.css
+++ b/src/components/MedalList.css
@@ -43,6 +43,12 @@
   background-color: #fe0c24;
 }
 
+.no-data {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 25px;
+}
+
 .odd {
   background-color: rgb(236, 236, 236);
 }
